# context-mesh

./: .gitignore  CONTRIBUTING.md  Dockerfile.core  Dockerfile.dashboard  Dockerfile.proxy  LICENSE  README.md  config.yaml  docker-compose.yml  grpc_server.py  pyproject.toml
.github/workflows/: ci.yml
contextmesh/: __init__.py  config.py  db.py
contextmesh/benchmarks/: __init__.py  metrics.py  run_benchmarks.py  run_simple_benchmarks.py
contextmesh/benchmarks/appworld/: runner.py
contextmesh/benchmarks/eval_harness/: base.py
contextmesh/benchmarks/officebench/: runner.py
contextmesh/benchmarks/real_agent/: __init__.py  agent.py  runner.py  tasks.json  tools.py
contextmesh/benchmarks/real_agent/corpus/: architecture.md  auth_service.py  orders.json
contextmesh/core/: __init__.py  __main__.py  pipeline.py  tokenizer.py
contextmesh/core/chunker/: __init__.py  base.py  code_chunker.py  csv_chunker.py  dependency_graph.py  html_chunker.py  json_chunker.py  log_chunker.py  markdown_chunker.py  mixed_chunker.py  shell_chunker.py
contextmesh/core/extractor/: __init__.py  budget_extractor.py
contextmesh/core/scorer/: __init__.py  cache.py  embed_scorer.py  guideline_adjuster.py
contextmesh/core/validator/: __init__.py  coherence_checker.py
contextmesh/dashboard/: __init__.py
contextmesh/dashboard/backend/: __init__.py  main.py  state.py
contextmesh/dashboard/backend/routers/: compress.py  failures.py  guidelines.py  sessions.py  tools.py
contextmesh/dashboard/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
contextmesh/dashboard/frontend/src/: App.tsx  api.ts  format.ts  hooks.ts  index.css  main.tsx  theme.tsx
contextmesh/dashboard/frontend/src/components/: Card.tsx  ChartLegend.tsx  ChartTooltip.tsx  CompressionDiff.tsx  EmptyState.tsx  GuidelineTimeline.tsx  StatTile.tsx  TokenChart.tsx  icons.tsx
contextmesh/dashboard/frontend/src/views/: FailureAnalysis.tsx  GuidelineHistory.tsx  Playground.tsx  SessionOverview.tsx  ToolBreakdown.tsx
contextmesh/feedback/: __init__.py  failure_detector.py  guideline_engine.py  guideline_persistence.py  schema.sql  trace_store.py
contextmesh/grpc/: __init__.py  client.py  compression_pb2.py  compression_pb2.pyi  compression_pb2_grpc.py
contextmesh/proxy/: __init__.py
contextmesh/proxy/mcp_proxy/: package-lock.json  package.json  test_claude_code_config.mjs  test_proxy.mjs  test_proxy_http.mjs  test_proxy_multi.mjs
contextmesh/proxy/mcp_proxy/proto/: compression.proto
contextmesh/proxy/mcp_proxy/src/: compression_client.ts  config.ts  index.ts  session_manager.ts
contextmesh/proxy/sdk/python/contextmesh/: __init__.py  client.py  models.py
contextmesh/proxy/sdk/typescript/: package-lock.json  package.json  tsconfig.json
contextmesh/proxy/sdk/typescript/src/: index.ts  models.ts
docs/: ARCHITECTURE.md
tests/: test_acon_loop.py  test_benchmark_agents.py  test_budget_extractor.py  test_chunkers.py  test_code_chunker.py  test_coherence_checker.py  test_config.py  test_dashboard_api.py  test_grpc_integration.py  test_json_chunker.py  test_new_features.py  test_pipeline.py
tests/fixtures/: __init__.py  large_python_file.py
